--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,6 @@
   <div id='main'>
     {{outlet}}
   </div>
-  <footer>
-    <p>[ Personal Blog &copy; <a href='https://twitter.com/VageeshB'>@VageeshB</a> 2014 ]</p>
-  </footer>
+  {{! Footer }}
+  {{render 'footer'}}
 </div>
