--- a/app/templates/slides.hbs
+++ b/app/templates/slides.hbs
@@ -4,5 +4,9 @@
   <div id='slides'>
     <img src="assets/img/img-1.jpg">
     <img src="assets/img/img-2.jpg">
+    <img src="assets/img/img-3.jpg">
+    <img src="assets/img/img-4.jpg">
+    <img src="assets/img/img-5.jpg">
+    <img src="assets/img/img-6.jpg">
   </div>
 </section>
