--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -4,6 +4,7 @@
   </h2>
   <div class='post-info'>
     <p>By {{creator}} [{{format-date created}}]</p>
+    {{share-twitter data-text="Check out this article: " data-size="large" data-hashtags="mistakenidentity"}}
   </div>
   <div class='post-body'>
     {{convert-marked body}}
