--- a/app/templates/top-nav.hbs
+++ b/app/templates/top-nav.hbs
@@ -2,6 +2,7 @@
 <p>Musings of a Creator</p>
 <nav>
   <ul>
+    <li>{{#link-to 'posts'}}Home{{/link-to}}</li>
     {{#each}}
       <li>{{#link-to location}}{{name}}{{/link-to}}</li>
     {{/each}}
